--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=5.3.7",
+		"php": "7.2",
 		"mpdf/mpdf": "^8.0",
 		"phpaes/phpaes": "^3.1",
 		"phpoffice/phpspreadsheet": "^1.15",
